--- a/.github/workflows/pushtofeature.yml
+++ b/.github/workflows/pushtofeature.yml
@@ -39,6 +39,6 @@ jobs:
         env:
           Test: ${{ secrets.REPO_SCOPED_TOKEN }}
         with:
-            github_token: ${{ secrets.REPO_SCOPED_TOKEN }}
+            Test: ${{ secrets.REPO_SCOPED_TOKEN }}
             title: Automatic pull request                           
             get_diff: true         
