--- a/.github/workflows/pushtofeature.yml
+++ b/.github/workflows/pushtofeature.yml
@@ -37,8 +37,8 @@ jobs:
         if: startsWith(github.ref, 'refs/heads/demo')
         uses: devops-infra/action-pull-request@v0.4.2
         env:
-          Test: ${{ secrets.REPO_SCOPED_TOKEN }}
-        #with:
-         #   github_token: ${{ secrets.REPO_SCOPED_TOKEN }}
-          #  title: Automatic pull request                           
-           # get_diff: true         
+          GITHUB_ACTION: ${{ secrets.REPO_SCOPED_TOKEN }}
+        with:
+            github_token: ${{ secrets.REPO_SCOPED_TOKEN }}
+            title: Automatic pull request                           
+            get_diff: true         
