--- a/.github/workflows/handlepullrequestfeature.yml
+++ b/.github/workflows/handlepullrequestfeature.yml
@@ -5,34 +5,16 @@ name: HandlePullRequesttoMaster
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   pull_request:
-    branches: master
+    branches: preci
    # Jobs to be executed
 jobs:
-    pmd-run:
+  pmd-run:
         runs-on: ubuntu-latest
         steps:
         # Checkout the source code
             - name: 'Checkout source code'
               uses: actions/checkout@v2
 
-            # Install PMD
-            - name: 'Install PMD'
-              run: |
-                  PMD_VERSION=`cat pmd/pmd-version.txt`
-                  wget https://github.com/pmd/pmd/releases/download/pmd_releases%2F$PMD_VERSION/pmd-bin-$PMD_VERSION.zip
-                  unzip pmd-bin-$PMD_VERSION.zip -d ~
-                  mv ~/pmd-bin-$PMD_VERSION ~/pmd
-                  ~/pmd/bin/run.sh pmd --version
-            # Run PMD scan
-            - name: 'Run PMD scan'
-              run: ~/pmd/bin/run.sh pmd -d force-app -R pmd/ruleset.xml -f text
-    scratch-org-test:
-        runs-on: ubuntu-latest        
-        if: ${{ github.actor != 'dependabot[bot]' }}
-        steps:
-            # Checkout the source code
-            - name: 'Checkout source code'
-              uses: actions/checkout@v2
               
             # Install Salesforce CLI
             - name: 'Install Salesforce CLI'
@@ -43,46 +25,13 @@ jobs:
                   echo "$HOME/sfdx/bin" >> $GITHUB_PATH
                   ~/sfdx/bin/sfdx version
                   
-            # Store secret for dev hub
-            - name: 'Populate auth file with DEVHUB_SFDX_URL secret'
-              shell: bash
-              run: |
-                  echo ${{ secrets.DEVHUB_SFDX_URL}} > ./DEVHUB_SFDX_URL.txt
-                  secretFileSize=$(wc -c "./DEVHUB_SFDX_URL.txt" | awk '{print $1}')
-                  if [ $secretFileSize == 1 ]; then
-                      echo "Missing DEVHUB_SFDX_URL secret. Is this workflow running on a fork?";
-                      exit 1;
-                  fi
                   
           # Authenticate dev hub
             - name: 'Authenticate Dev Hub'
-              run: sfdx auth:sfdxurl:store -f ./DEVHUB_SFDX_URL.txt -a devhub -d
+              run: sfdx force:auth:jwt:grant --clientid 3MVG9fe4g9fhX0E7Dy5LJtO93WCIHHA0Lsi9uOW5hG3RVbzSsjSB_HmDLIJnUiN.W4xJjFbtW92uXaGbYImnf --jwtkeyfile server.key --username anig2989@gmail.com --instanceurl https://login.salesforce.com $
 
-            # Create scratch org
-            - name: 'Create scratch org'
-              run: sfdx force:org:create -f config/project-scratch-def.json -a scratch-org -s -d 1
 
-            # Deploy source to scratch org
-            - name: 'Push source to scratch org'
-              run: sfdx force:source:push
-              
-           # Run Apex tests in scratch org
-            - name: 'Run Apex tests'
-              run: sfdx force:apex:test:run -c -r human -d ./tests/apex -w 20
-
-            # Delete temporary test file that Codecov is unable to parse
-            - name: 'Delete coverage file (temporary step)'
-              run: rm ./tests/apex/test-result-707*-codecoverage.json
-
-            # Upload code coverage data
-            - name: 'Upload code coverage for Apex to Codecov.io'
-              uses: codecov/codecov-action@v2.0.2
-              with:
-                  flags: Apex
-
-            # Housekeeping
-            - name: 'Delete scratch org'
-              if: always()
-              run: sfdx force:org:delete -p -u scratch-org
+            
+        
 
             
