--- a/.github/workflows/pushtofeature.yml
+++ b/.github/workflows/pushtofeature.yml
@@ -3,7 +3,7 @@
 name: PushToFeature
 # Controls when the workflow will run or not
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
+  # Triggers the workflow on push or pull request events but only for the demo branch
   push:
     branches: demobranch
    # Jobs to be executed
