--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -4,15 +4,121 @@ name: PromotetoCI
 on:
  
   push:
-    branches: CI
+    branches: none
   
 jobs:
-    deploy-acc:
+    deploy-to-org:
         runs-on: ubuntu-latest
         steps:
         # Checkout the source code
             - name: 'Checkout source code'
               uses: actions/checkout@v2
+              
+        #  Create promotional Branch     
+            - name: 'Creating promotional branch before code promotion'
+              shell: bash
+              run: |
+                  source ./config.sh
+                  SOURCE_DIRECTORY=`basename "${SOURCE_REPO_URL}" .git`
+
+                  echo $CURRENT_BRANCH_NAME
+
+                  #cloning the repo.
+                  echo git clone ${SOURCE_REPO_URL}
+                  git clone ${SOURCE_REPO_URL}
+
+                  #Entering into directory where the repo is cloned.
+                  echo cd ${SOURCE_DIRECTORY} 
+                  cd ${SOURCE_DIRECTORY}
+
+                  echo git fetch origin
+                  git fetch origin
+
+                  destination_exists=$(git ls-remote --heads origin $DESTINATION_BRANCH_NAME | wc -l)
+          
+                  if [ $destination_exists == 0 ]; then
+                  echo "*************  No $DESTINATION_BRANCH_NAME branch exists  *************"
+                    exit 1
+                  fi
+
+                  current_exists=$(git ls-remote --heads origin $CURRENT_BRANCH_NAME | wc -l)
+          
+                  if [ $current_exists == 0 ]; then
+                  echo "*************  No $CURRENT_BRANCH_NAME branch exists  *************"
+                    exit 1
+                  fi
+
+                  #Creating Promotional branch from destination branch(like CI, QA or UAT).
+                  echo git checkout $DESTINATION_BRANCH_NAME
+                  git checkout $DESTINATION_BRANCH_NAME
+
+                  echo git checkout -b Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId $DESTINATION_BRANCH_NAME
+                  git checkout -b Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId $DESTINATION_BRANCH_NAME
+
+                  git checkout Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+
+                  git config --global user.email "${EMAIL_OF_USER_FOR_DESTINATION_REPO}"
+                  git config --global user.name "${NAME_OF_USER}"
+
+                  git add .
+                  git commit -m "creating promotional branch"
+                  git push origin Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                  exec_cmd()
+                  {
+                    echo "$1"
+                    $1
+                    return_code=$?
+                    if [ $return_code -ne 0 ] ; then
+                      echo "ERROR - $1 failed with $return_code"
+                      conflicts_exists=0
+                      while [ $conflicts_exists -eq 0 ]
+                      do
+                        echo "grep -lr '<<<<<<<' force-app/ | xargs -d git checkout --theirs"
+                        grep -lr '<<<<<<<' force-app/ | xargs -d"\n" git checkout --theirs
+
+                        grep -lrI '<<<<<<<' force-app/
+                        conflicts_exists=$?
+                      done
+                      git status
+                      echo git add .
+                      git add .
+                      echo git commit -m "resolving merge conflicts"
+                      git commit -m "resolving merge conflicts"
+                      echo "*****Conflict Resolved*****"
+                    else
+                       echo "No conflict"
+                    fi
+                   }
+
+                   echo git merge origin/$CURRENT_BRANCH_NAME
+                   exec_cmd "git merge origin/$CURRENT_BRANCH_NAME"
+
+                   #Merging current branch with Promotional branch.
+                   #echo git merge origin/$CURRENT_BRANCH_NAME
+                   #git merge origin/$CURRENT_BRANCH_NAME
+
+                   #Pushing Promotional branch.
+                   exec_cmd()
+                   {
+                     echo "$1"
+                     $1
+                     return_code=$?
+                     if [ $return_code -ne 0 ] ; then
+      
+                       echo "ERROR - $1 failed with $return_code"
+                       echo git checkout $DESTINATION_BRANCH_NAME
+                       git checkout $DESTINATION_BRANCH_NAME
+
+                       git checkout -d Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                       git push origin --delete Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                       exit 1
+                      else
+                       echo "Successfully created Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId branch"
+                      fi
+                    }
+                    echo git push origin Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                    exec_cmd "git push origin Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId"
+
         # Install Salesforce CLI
             - name: 'Install Salesforce CLI'
               run: |
@@ -38,7 +144,35 @@ jobs:
 
               
             # Deploy source to CI Org
-            - name: 'Push source to Acc org'
+            - name: 'Push source to CI org'
               run: sfdx force:source:deploy -c -u anig2989@gmail.com -p force-app/main/default
+              
+            # Merge to destination branch
+            - name: 'Merging to destination branch'
+              shell: bash
+              run: |
+                  source ./config.sh
+                  git remote set-url origin ${SOURCE_REPO_URL}
+                  git config --global user.email "${EMAIL_OF_USER_FOR_DESTINATION_REPO}"
+                  git config --global user.name "${NAME_OF_USER}"
+                  git fetch
+                  echo git checkout Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                  git checkout Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                  echo git checkout $DESTINATION_BRANCH_NAME
+                  git checkout $DESTINATION_BRANCH_NAME
+                  echo git merge origin/Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                  git merge origin/Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+                  echo git push origin $DESTINATION_BRANCH_NAME
+                  git push origin $DESTINATION_BRANCH_NAME
+                  
+              # Delete promotional branch
+            - name: 'Deleting promotional branch'
+              run: |
+                  source ./config.sh
+                  git remote set-url origin ${SOURCE_REPO_URL}
+                  echo git checkout $DESTINATION_BRANCH_NAME
+                  git checkout $DESTINATION_BRANCH_NAME
+                  git push origin --delete Promotional-$DESTINATION_BRANCH_NAME-$PipelineName-$BuildPipelineId
+        
 
    
