--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -20,7 +20,7 @@ jobs:
                   source ./config.sh
                   SOURCE_DIRECTORY=`basename "${SOURCE_REPO_URL}" .git`
 
-                  echo ${{ secrets.CURRENT_BRANCH_NAME }}
+                  echo ${CURRENT_BRANCH_NAME}
 
                   #cloning the repo.
                   echo git clone ${SOURCE_REPO_URL}
@@ -33,35 +33,35 @@ jobs:
                   echo git fetch origin
                   git fetch origin
 
-                  destination_exists=$(git ls-remote --heads origin ${{ secrets.DESTINATION_BRANCH_NAME }} | wc -l)
+                  destination_exists=$(git ls-remote --heads origin ${DESTINATION_BRANCH_NAME} | wc -l)
           
                   if [ $destination_exists == 0 ]; then
-                  echo "*************  No ${{ secrets.DESTINATION_BRANCH_NAME }} branch exists  *************"
+                  echo "*************  No ${DESTINATION_BRANCH_NAME} branch exists  *************"
                     exit 1
                   fi
 
-                  current_exists=$(git ls-remote --heads origin ${{ secrets.CURRENT_BRANCH_NAME }} | wc -l)
+                  current_exists=$(git ls-remote --heads origin ${CURRENT_BRANCH_NAME} | wc -l)
           
                   if [ $current_exists == 0 ]; then
-                  echo "*************  No ${{ secrets.CURRENT_BRANCH_NAME }} branch exists  *************"
+                  echo "*************  No ${CURRENT_BRANCH_NAME} branch exists  *************"
                     exit 1
                   fi
 
                   #Creating Promotional branch from destination branch(like CI, QA or UAT).
-                  echo git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
+                  echo git checkout ${DESTINATION_BRANCH_NAME}
+                  git checkout ${DESTINATION_BRANCH_NAME}
 
-                  echo git checkout -b Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git checkout -b Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} ${{ secrets.DESTINATION_BRANCH_NAME }}
+                  echo git checkout -b Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} ${DESTINATION_BRANCH_NAME}
+                  git checkout -b Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} ${DESTINATION_BRANCH_NAME}
 
-                  git checkout Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
 
                   git config --global user.email "${EMAIL_OF_USER_FOR_DESTINATION_REPO}"
                   git config --global user.name "${NAME_OF_USER}"
 
                   git add .
                   git commit -m "creating promotional branch"
-                  git push origin Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git push origin Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
                   exec_cmd()
                   {
                     echo "$1"
@@ -89,12 +89,12 @@ jobs:
                     fi
                    }
 
-                   echo git merge origin/${{ secrets.CURRENT_BRANCH_NAME }}
-                   exec_cmd "git merge origin/${{ secrets.CURRENT_BRANCH_NAME }}"
+                   echo git merge origin/${CURRENT_BRANCH_NAME}
+                   exec_cmd "git merge origin/${CURRENT_BRANCH_NAME}"
 
                    #Merging current branch with Promotional branch.
-                   #echo git merge origin/${{ secrets.CURRENT_BRANCH_NAME }}
-                   #git merge origin/${{ secrets.CURRENT_BRANCH_NAME }}
+                   #echo git merge origin/${CURRENT_BRANCH_NAME}
+                   #git merge origin/${CURRENT_BRANCH_NAME}
 
                    #Pushing Promotional branch.
                    exec_cmd()
@@ -105,18 +105,18 @@ jobs:
                      if [ $return_code -ne 0 ] ; then
       
                        echo "ERROR - $1 failed with $return_code"
-                       echo git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                       git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
+                       echo git checkout ${DESTINATION_BRANCH_NAME}
+                       git checkout ${DESTINATION_BRANCH_NAME}
 
-                       git checkout -d Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                       git push origin --delete Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                       git checkout -d Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                       git push origin --delete Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
                        exit 1
                       else
-                       echo "Successfully created Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} branch"
+                       echo "Successfully created Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} branch"
                       fi
                     }
-                    echo git push origin Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                    exec_cmd "git push origin Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
+                    echo git push origin Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                    exec_cmd "git push origin Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}"
 
             # Install Salesforce CLI
             - name: 'Install Salesforce CLI'
@@ -141,27 +141,27 @@ jobs:
               shell: bash
               run: |
                   source ./config.sh
-                  git remote set-url origin ${{ secrets.SOURCE_REPO_URL }}
+                  git remote set-url origin ${SOURCE_REPO_URL}
                   git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
                   git config --global user.name "${{ secrets.NAME_OF_USER }}"
                   git fetch
-                  echo git checkout Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  git checkout Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  echo git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  echo git merge origin/Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  git merge origin/Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
-                  echo git push origin ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git push origin ${{ secrets.DESTINATION_BRANCH_NAME }}
+                  echo git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  echo git checkout ${DESTINATION_BRANCH_NAME}
+                  git checkout ${DESTINATION_BRANCH_NAME}
+                  echo git merge origin/Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git merge origin/Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  echo git push origin ${DESTINATION_BRANCH_NAME}
+                  git push origin ${DESTINATION_BRANCH_NAME}
                   
               # Delete promotional branch
             - name: 'Deleting promotional branch'
               run: |
                   source ./config.sh
                   git remote set-url origin ${SOURCE_REPO_URL}
-                  echo git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git checkout ${{ secrets.DESTINATION_BRANCH_NAME }}
-                  git push origin --delete Promotional-${{ secrets.DESTINATION_BRANCH_NAME }}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  echo git checkout ${DESTINATION_BRANCH_NAME}
+                  git checkout ${DESTINATION_BRANCH_NAME}
+                  git push origin --delete Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
         
 
    
