--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -1,9 +1,7 @@
 
-name: CI
+name: Promote-to-CI
 
 on: 
-
-  # Allows you to run this workflow manually from the Actions tab
    workflow_dispatch:
   
 jobs:
