--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -56,6 +56,7 @@ jobs:
               env:
                CURRENT_BRANCH_NAME: ${{ inputs.CurrentBranch }}
                DESTINATION_BRANCH_NAME: ${{ inputs.DestinationBranch }}
+               PASSWORD: ${{ secrets.PASSWORD }}
 
             # Install Salesforce CLI
             - name: 'Install Salesforce CLI'
