--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -71,9 +71,21 @@ jobs:
             - name: 'Finding delta changes'
               run: |
                   source ./config.sh
-                  sfdx plugins:install sfdx-git-delta
-                  mkdir Delta-pkg
-                  sfdx sgd:source:delta --to "HEAD" --from "HEAD^" --output Delta-pkg/ --generate-delta
+                  git remote set-url origin ${SOURCE_REPO_URL}
+                  git config --global user.email "${{ secrets.EMAIL_OF_USER_FOR_DESTINATION_REPO }}"
+                  git config --global user.name "${{ secrets.NAME_OF_USER }}"
+                  git fetch
+                  echo git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
+                  git rev-parse $CURRENT_BRANCH_NAME
+                  git rev-parse $DESTINATION_BRANCH_NAME
+                  echo destination branch commit is $GITHUB_SHA
+                  echo 'y' | sfdx plugins:install sfpowerkit
+                  sfdx sfpowerkit:project:diff -r $COMMIT_ID -t $NEW_COMMIT_ID -d Delta_pkg_CI
+              env:
+               CURRENT_BRANCH_NAME: ${{ inputs.CurrentBranch }}
+               DESTINATION_BRANCH_NAME: ${{ inputs.DestinationBranch }}
+       
             # Authenticate Org
             - name: 'Authenticate CI Org'
               run: sfdx force:auth:jwt:grant --clientid 3MVG9fe4g9fhX0E7Dy5LJtO93WCIHHA0Lsi9uOW5hG3RVbzSsjSB_HmDLIJnUiN.W4xJjFbtW92uXaGbYImnf --jwtkeyfile server.key --username anig2989@gmail.com --instanceurl https://login.salesforce.com 
