--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -71,11 +71,11 @@ jobs:
             - name: 'Finding delta changes'
               run: |
                   source ./config.sh
-                  git rev-parse HEAD >> $CURRENT_COMMIT_ID
-                  echo PREVIOUS_SUCCESSFUL_COMMIT_ID
-                  git ls-remote https://github.com/anig2989/Devopstrial.git | \
-                  grep refs/heads/preci | cut -f 1 >> PREVIOUS_SUCCESSFUL_COMMIT_ID
-                  echo PREVIOUS_SUCCESSFUL_COMMIT_ID
+                  CURRENT_COMMIT_ID=$(git rev-parse HEAD)
+                  echo CURRENT_COMMIT_ID is $CURRENT_COMMIT_ID
+                  PREVIOUS_SUCCESSFUL_COMMIT_ID=$(git ls-remote https://github.com/anig2989/Devopstrial.git | \
+                  grep refs/heads/preci | cut -f 1)
+                  echo PREVIOUS_SUCCESSFUL_COMMIT_ID is $PREVIOUS_SUCCESSFUL_COMMIT_ID
                   echo 'y' | sfdx plugins:install sfpowerkit
                   sfdx sfpowerkit:project:diff -r PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
               
