--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -79,8 +79,9 @@ jobs:
                   git checkout Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER}
                   CURRENT_COMMIT_ID=$(git rev-parse HEAD)
                   echo CURRENT_COMMIT_ID is $CURRENT_COMMIT_ID
-                  PREVIOUS_SUCCESSFUL_COMMIT_ID=$(git ls-remote https://github.com/anig2989/Devopstrial.git | \
-                  grep refs/heads/preci | cut -f 1)
+                  git ls-remote https://github.com/anig2989/Devopstrial.git | \
+                  grep refs/heads/Promotional-${DESTINATION_BRANCH_NAME}-${GITHUB_RUN_ID}-${GITHUB_RUN_NUMBER} | cut -f 1 > PREVIOUS_SUCCESSFUL_COMMIT_ID.txt
+                  PREVIOUS_SUCCESSFUL_COMMIT_ID=$(<PREVIOUS_SUCCESSFUL_COMMIT_ID.txt)
                   echo PREVIOUS_SUCCESSFUL_COMMIT_ID is $PREVIOUS_SUCCESSFUL_COMMIT_ID
                   echo 'y' | sfdx plugins:install sfpowerkit
                   sfdx sfpowerkit:project:diff -r PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
