--- a/.github/workflows/deploytoacc.yml
+++ b/.github/workflows/deploytoacc.yml
@@ -86,7 +86,7 @@ jobs:
                   PREVIOUS_SUCCESSFUL_COMMIT_ID=$(<PREVIOUS_SUCCESSFUL_COMMIT_ID.txt)
                   echo PREVIOUS_SUCCESSFUL_COMMIT_ID is $PREVIOUS_SUCCESSFUL_COMMIT_ID
                   echo 'y' | sfdx plugins:install sfpowerkit
-                  sfdx sfpowerkit:project:diff -r PREVIOUS_SUCCESSFUL_COMMIT_ID -t $CURRENT_COMMIT_ID -d Delta_pkg
+                  sfdx sfpowerkit:project:diff -r $CURRENT_COMMIT_ID -t PREVIOUS_SUCCESSFUL_COMMIT_ID -d Delta_pkg
               env:
                CURRENT_BRANCH_NAME: ${{ inputs.CurrentBranch }}
                DESTINATION_BRANCH_NAME: ${{ inputs.DestinationBranch }}
